# r9s-python

./: AGENTS.md  DESIGN.md  LICENSE  Makefile  README.md  USAGE.md  main.py  pyproject.toml  relay.yaml
docs/: cli-dev-guide.md  tool-adapter-dev-guide.md
docs/models/: chatcompletionstreamchoice.md
example/: chat.py  chat_extension.py
r9s/: __init__.py  cli.py  terminal.py
r9s/tools/: __init__.py  base.py  claude_code.py
src/r9s/: _version.py  completions.py
src/r9s/cli_tools/: bot_cli.py  bots.py  chat_cli.py  chat_extensions.py  cli.py  i18n.py
src/r9s/cli_tools/ui/: __init__.py  spinner.py
src/r9s/models/: chatcompletionstreamchoice.py
