[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "r9s"
version = "0.2.5"
description = "The official Python library for the r9s API"
readme = "README.md"
requires-python = ">=3.9.2"
license = {text = "MIT"}
authors = [
    {name = "routertokens"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/routertokens/r9s-python"
Repository = "https://github.com/routertokens/r9s-python"
Issues = "https://github.com/routertokens/r9s-python/issues"

[project.scripts]
r9s = "r9s.cli:main"

[tool.setuptools]
packages = ["r9s", "r9s.tools"]
