[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "r9s"
version = "0.4.0"
description = "The official Python library for the r9s API"
readme = "README.md"
requires-python = ">=3.9.2"
license = "MIT"
authors = [
    {name = "routertokens"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "httpcore >=1.0.9",
    "httpx >=0.28.1",
    "pydantic >=2.11.2",
]

[project.urls]
Homepage = "https://github.com/r9s-ai/r9s-python"
Repository = "https://github.com/r9s-ai/r9s-python"
Issues = "https://github.com/r9s-ai/r9s-python/issues"

[project.scripts]
r9s = "r9s.cli_tools.cli:main"


[project.optional-dependencies]
test = [
    "pytest",
    "pytest-asyncio",
]
dev = [
    "mypy ==1.15.0",
    "pylint ==3.2.3",
    "pyright ==1.1.398",
]



[tool.setuptools.packages.find]
where = ["src"]


[tool.setuptools.package-data]
"*" = ["py.typed"]


[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
pythonpath = ["src"]


[tool.mypy]
disable_error_code = "misc"
explicit_package_bases = true
mypy_path = "src"

[[tool.mypy.overrides]]
module = "typing_inspect"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "jsonpath"
ignore_missing_imports = true

[tool.pyright]
venvPath = "."
venv = ".venv"
include = ["src", "example", "main.py"]
exclude = ["build", "dist", "**/__pycache__", "**/*.egg-info"]
pythonVersion = "3.9"
typeCheckingMode = "basic"
